# opengl_projects

./: CMakeLists.txt  README.md  liniaerAlg.cpp  liniaerAlg.h  main.cpp  out
